--- a/src/views/Layout/Header/index.scss
+++ b/src/views/Layout/Header/index.scss
@@ -5,7 +5,19 @@
 .slogan :hover {
   color: unset !important;
 }
+.ant-menu-item {
+  color: black !important;
+}
 .ant-menu-item::after {
   color: unset !important;
   border-bottom: unset !important;
+}
+.ant-menu-item-active {
+  color: gray !important;
+}
+.ant-menu-submenu::after {
+  border-bottom: unset !important;
+}
+.ant-menu-submenu-active {
+  color: gray !important;
 }
